public enum AccessId: String {
    case idBtnFrom
    case idBtnTo
    case idTextFieldFrom
    case idTextFieldTo
    case idSearch
}

public enum AccessIdKeyboard: String, CaseIterable {
    case idBtn0
    case idBtn1
    case idBtn2
    case idBtn3
    case idBtn4
    case idBtn5
    case idBtn6
    case idBtn7
    case idBtn8
    case idBtn9
    case idDel
    case idClear
    case idSwipe
    case idDot
}
