...
            textFieldFrom.text = textField + text
        }
        convert()
    }

    func swipe() {
        alert(title: "Error", message: "!!!", style: .default)
    }

    func delField() {
        let textField = textFieldFrom.text ?? ""
        textFieldFrom.text = String(textField.dropLast())
        convert()
...
